--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -249,6 +249,8 @@
             margin-top: 60px;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
