--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ movie.title }} - Movie Details</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
+     crossorigin="anonymous"></script>
     <style>
         /* Reset and basic styles */
         body, html {
