--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ series.title }} - Series Details</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
+     crossorigin="anonymous"></script>
     <style>
         /* Your existing styles */
         body, html {
