--- a/moviedb/templates/category_movies.html
+++ b/moviedb/templates/category_movies.html
@@ -8,6 +8,7 @@
     <style>
         /* Your existing styles */
     </style>
+    <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
 <body>
     <header>
