--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -5,6 +5,7 @@
     <title>{{ movie.title }} - Movie Details</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
      crossorigin="anonymous"></script>
+     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
     <style>
         /* Reset and basic styles */
         body, html {
