--- a/moviedb/templates/genre_movies.html
+++ b/moviedb/templates/genre_movies.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movies by Genre</title>
+    <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
 <body>
     <h1>Movies by Genre</h1>
