--- a/moviedb/templates/series_details.html
+++ b/moviedb/templates/series_details.html
@@ -6,6 +6,7 @@
     <title>{{ series.title }} - Series Details</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
      crossorigin="anonymous"></script>
+     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
     <style>
         /* Your existing styles */
         body, html {
