--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wayne's Movie Site</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
+     crossorigin="anonymous"></script>
     <style>
         /* Reset and basic styles */
         body, html {
@@ -550,5 +552,7 @@
 
         setInterval(rotateMovies, 5000); // Rotate every 5 seconds
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
+     crossorigin="anonymous"></script>
 </body>
 </html>
