--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -255,6 +255,7 @@
      crossorigin="anonymous"></script>
      <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
+<script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 <body>
     <header>
         <button class="openbtn" onclick="openNav()">☰</button>
