--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -257,6 +257,7 @@
      <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
+   <script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
      <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-8EZ1KJSHRW"></script>
 <script>
