--- a/moviedb/templates/series_list.html
+++ b/moviedb/templates/series_list.html
@@ -220,6 +220,7 @@
     </style>
     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
+    <script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 <body>
     <header>
         <button class="openbtn" onclick="openNav()">☰</button>
