--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
     crossorigin="anonymous"></script>
     <meta charset="UTF-8">
@@ -251,10 +252,93 @@
             padding: 40px 4%;
             margin-top: 60px;
         }
+
+/* Responsive adjustments */
+@media screen and (max-width: 768px) {
+    /* Header adjustments */
+    header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px 4%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        gap: 10px;
+        margin-top: 10px;
+    }
+
+    .search-container {
+        width: 100%;
+        margin-top: 10px;
+    }
+
+    .search-container input[type=text] {
+        width: calc(100% - 80px);
+    }
+
+    /* Main content adjustments */
+    .main {
+        margin-top: 120px;
+    }
+
+    /* Movie row adjustments */
+    .movies {
+        gap: 5px;
+    }
+
+    .movie {
+        width: 150px;
+    }
+
+    /* Latest Movies Section adjustments */
+    .full-width-poster {
+        height: 300px;
+    }
+
+    .latest-movie-info {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .small-poster {
+        width: 100px;
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+
+    .movie-details h3 {
+        font-size: 1.5rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    /* Further adjustments for smaller screens */
+    .logo {
+        font-size: 1.5rem;
+    }
+
+    .movie {
+        width: 120px;
+    }
+
+    .full-width-poster {
+        height: 250px;
+    }
+
+    .movie-details h3 {
+        font-size: 1.2rem;
+    }
+}
+
+/* Sidebar responsiveness */
+@media screen and (max-height: 450px) {
+    .sidebar {padding-top: 15px;}
+    .sidebar a {font-size: 18px;}
+}
     </style>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9132334225065239"
      crossorigin="anonymous"></script>
-     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
    <script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
