--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -259,17 +259,23 @@
     header {
         flex-direction: column;
         align-items: flex-start;
-        padding: 10px 4%;
+    }
+
+    .logo {
+        margin-bottom: 10px;
     }
 
     .navbar {
-        flex-direction: column;
-        gap: 10px;
+        order: 3;
+        width: 100%;
+        justify-content: space-between;
         margin-top: 10px;
     }
 
     .search-container {
+        order: 2;
         width: 100%;
+        margin-left: 0;
         margin-top: 10px;
     }
 
@@ -318,6 +324,15 @@
         font-size: 1.5rem;
     }
 
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 10px;
+    }
+
+    .search-container button {
+        padding: 8px;
+    }
     .movie {
         width: 120px;
     }
