--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -61,7 +61,7 @@ header {
     color: #fff;
 }
 
-.search-container {
+.search-container form {
     display: flex;
     align-items: center;
 }
@@ -104,6 +104,50 @@ header {
         padding-right: 30px;
         cursor: pointer;
         transition: width 0.4s;
+    }
+
+    .search-container form {
+        position: relative;
+        width: 30px;
+        overflow: hidden;
+        transition: width 0.4s;
+    }
+
+    .search-container form:focus-within {
+        width: calc(100vw - 120px);
+    }
+
+    .search-container input[type=text] {
+        width: 100%;
+        padding-right: 30px;
+        cursor: pointer;
+    }
+
+    .search-container button {
+        position: absolute;
+        right: 0;
+        background: transparent;
+        border: none;
+        padding: 0;
+        width: 30px;
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .search-container form:focus-within button {
+        background-color: #e50914;
+        right: -40px;
+    }
+
+    .search-container form:focus-within button .search-icon {
+        display: none;
+    }
+
+    .search-container form:focus-within button::after {
+        content: "Search";
+        color: #fff;
     }
 
     .search-container input[type=text]:focus {
