--- a/moviedb/templates/home.html
+++ b/moviedb/templates/home.html
@@ -388,6 +388,7 @@ header {
     .latest-movie-info {
         flex-direction: column;
         align-items: flex-start;
+        padding: 15px;
     }
 
     .small-poster {
@@ -398,6 +399,10 @@ header {
 
     .movie-details h3 {
         font-size: 1.5rem;
+    }
+
+    .movie-details p {
+        font-size: 0.9rem;
     }
 }
 
@@ -424,8 +429,16 @@ header {
         height: 250px;
     }
 
+    .small-poster {
+        width: 80px;
+    }
+
     .movie-details h3 {
         font-size: 1.2rem;
+    }
+
+    .movie-details p {
+        font-size: 0.8rem;
     }
 }
 
