--- a/moviedb/templates/series_list.html
+++ b/moviedb/templates/series_list.html
@@ -208,20 +208,16 @@ header {
 }
 
 /* Responsive styles */
-@media screen and (max-width: 1024px) {
-    .navbar {
-        gap: 10px;
-    }
-
-    .search-container input[type=text] {
-        width: 150px;
-    }
-}
 
 @media screen and (max-width: 768px) {
     header {
         padding: 10px 2%;
     }
+
+    .logo {
+        font-size: 1.5rem;
+    }
+
 
     .navbar {
         display: none;
