--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -171,7 +171,7 @@
 
         .download-button {
             display: inline-block;
-            background-color: #4CAF50;
+            background-color: red;
             color: #fff;
             padding: 12px 24px;
             text-decoration: none;
