--- a/moviedb/templates/movie_details.html
+++ b/moviedb/templates/movie_details.html
@@ -184,7 +184,7 @@
         }
         
         .download-button:hover {
-            background-color: #45a049;
+            background-color: maroon;
         }
 
         /* Responsive styles */
@@ -236,8 +236,7 @@
                 {% endfor %}
                 </p>
                 <p><strong>Runtime:</strong> {{ movie.runtime }} minutes</p>
-                <a href="#" class="watch-button">Watch Now</a>
-                <a href="#" class="download-button" id="downloadButton">Download</a>
+                <a href="#" class="download-button" id="downloadButton">Watch Now</a>
             </div>
         </div>
         
