--- a/moviedb/templates/series_list.html
+++ b/moviedb/templates/series_list.html
@@ -377,6 +377,15 @@ header {
     </style>
     <script type='text/javascript' src='//pl23927486.highratecpm.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-09ZV7EG7YL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-09ZV7EG7YL');
+</script>
     <script type='text/javascript' src='//elegantimpose.com/de/89/b7/de89b76309771563f1f618587e867e6b.js'></script>
 <body>
     <header>
@@ -402,8 +411,15 @@ header {
     <div id="mySidebar" class="sidebar">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
         <a href="#">Home</a>
-        <a href="{% url 'series_movies' %}">All Series</a>
-        <!-- Add more sidebar links as needed -->
+        <a href="{% url 'action_movies' %}">Action</a>
+        <a href="{% url 'animation_movies' %}">Animation</a>
+        <a href="{% url 'comedy_movies' %}">Comedy</a>
+        <a href="{% url 'drama_movies' %}">Drama</a>
+        <a href="{% url 'horror_movies' %}">Horror</a>
+        <a href="{% url 'investigative_movies' %}">Investigative</a>
+        <a href="{% url 'romance_movies' %}">Romance</a>
+        <a href="{% url 'scifi_movies' %}">Sci-fi</a>
+        <a href="{% url 'series_movies' %}">Series</a>
     </div>
 
     <div class="container main">
@@ -436,29 +452,30 @@ header {
             document.getElementById("mySidebar").style.width = "0";
             document.querySelector('.main').style.marginLeft= "0";
         }
+    </script>
+    <script>
+        function openNav() {
+            document.getElementById("mySidebar").style.width = "250px";
+        }
         
-    document.addEventListener('DOMContentLoaded', (event) => {
-    const searchForm = document.querySelector('.search-container form');
-    const searchInput = document.querySelector('.search-container input');
-    const searchButton = document.querySelector('.search-container button');
-
-    searchInput.addEventListener('focus', () => {
-        searchButton.style.backgroundColor = '#e50914';
-    });
-
-    searchInput.addEventListener('blur', () => {
-        if (searchInput.value === '') {
-            searchButton.style.backgroundColor = 'transparent';
+        function closeNav() {
+            document.getElementById("mySidebar").style.width = "0";
         }
-    });
-
-    // Prevent form submission when the input is empty
-    searchForm.addEventListener('submit', (e) => {
-        if (searchInput.value.trim() === '') {
-            e.preventDefault();
-        }
-    });
-});
+        
+        document.addEventListener('DOMContentLoaded', (event) => {
+            const searchInput = document.querySelector('.search-container input');
+            const searchButton = document.querySelector('.search-container button');
+        
+            searchInput.addEventListener('focus', () => {
+                searchButton.style.backgroundColor = '#e50914';
+            });
+        
+            searchInput.addEventListener('blur', () => {
+                if (searchInput.value === '') {
+                    searchButton.style.backgroundColor = 'transparent';
+                }
+            });
+        });
     </script>
 </body>
 </html>
